第八章作业

--- a/lcelRag.ipynb
+++ b/lcelRag.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "bb41f159-1102-47bb-9784-a9545386b275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "import bs4\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "72cf4c7e-8ecd-4bc9-a343-92ad2d9bc9c5",
    "metadata": {},
    "outputs": [
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "8662d634-5783-4473-ad06-60ea0242e158",
    "metadata": {},
    "outputs": [],
@@ -116,10 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "64e51124-14d8-461c-a16d-94bdec13b8a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6564/3666754692.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding=HuggingFaceEmbeddings(\n",
+      "/root/anaconda3/envs/langchain/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "vectorstore  = Chroma.from_documents(\n",
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "bc646816-81fc-472e-a532-b04b84a82069",
    "metadata": {},
    "outputs": [],
@@ -145,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "1fadf8f4-5542-48fa-a320-d423ac0786bc",
    "metadata": {},
    "outputs": [],
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "f3a58efc-2e1c-4b4c-ab55-d6eaf3d20db3",
    "metadata": {},
    "outputs": [
@@ -182,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "5d7d7d4b-5459-43f6-800b-37bb7805f79d",
    "metadata": {},
    "outputs": [],
@@ -194,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "3ad94c4c-343e-4b34-b49c-7666254115ba",
    "metadata": {},
    "outputs": [],
@@ -209,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "318c49ad-f2b3-4490-abee-8ed5a1fc8fcd",
    "metadata": {},
    "outputs": [
@@ -217,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "《西游记》主要人物有四个：唐僧（唐三藏）、孙悟空、猪八戒（悟能）和沙僧（悟净）。"
+      "《西游记》中取经的主要人物共有四人：唐僧（玄奘）、孙悟空、猪八戒和沙僧。"
      ]
     }
    ],
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "9fd58ac8-e10b-425c-acf1-44382a554567",
    "metadata": {},
    "outputs": [
@@ -237,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "根据提供的上下文，无法确定《西游记》中妖怪的具体数量。文中提到了多个妖怪（如青毛狮子怪、黄牙老象、大鹏雕等），但并未统计总数。建议查阅完整原著或相关研究资料以获取准确数字。"
+      "根据提供的上下文，无法准确统计《西游记》中妖怪的总数。文中提到“百十大小头目”和众多小妖，但具体数量未明确说明。建议查阅全书或相关统计资料以获取准确数字。"
      ]
     }
    ],
@@ -248,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "2540d0bc-cfa3-4dd0-811f-8485fd6bae9a",
    "metadata": {},
    "outputs": [
@@ -256,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "西游记的最后一回讲的是唐僧师徒历经九九八十一难后到达西天，取得真经并返回东土大唐的故事。他们最终修成正果，被封为佛、菩萨等果位，完成了取经的使命。"
+      "西游记的最后一回讲的是唐僧师徒历经九九八十一难后终于到达西天取得真经，如来佛祖封唐僧为旃檀功德佛、孙悟空为斗战胜佛、猪八戒为净坛使者、沙僧为金身罗汉，白马也封为八部天龙。师徒四人功德圆满，返回东土大唐传扬佛法。"
      ]
     }
    ],
@@ -267,8 +286,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2123bab1-a85b-4891-8607-36524208c175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "template = \"\"\"请基于以下背景信息回答问题，并严格遵守回答规则：\n",
+    "【背景信息】\n",
+    "{context}\n",
+    "【回答规则】\n",
+    "1. 如果背景信息不包含答案，直接回答\"该问题不在知识库范围内\"\n",
+    "2. 回答需分点说明，使用「1. 2. 3.」的格式\n",
+    "3. 每点不超过20个汉字，总长度控制在1000字内\n",
+    "4. 在回答末尾添加与问题相关的拓展建议\n",
+    "5. 使用口语化中文，避免专业术语\n",
+    "\n",
+    "问题：{question}\n",
+    "\n",
+    "请参考以下回答格式：\n",
+    "【要点总结】\n",
+    "1. 核心要点1\n",
+    "2. 核心要点2\n",
+    "【拓展建议】相关建议内容\n",
+    "\"\"\"\n",
+    "custom_rag_prompt = PromptTemplate.from_template(template)\n",
+    "\n",
+    "rag_chain2 = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | custom_rag_prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d90cb3b4-2b2b-412d-b45d-550b1d80c5be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【要点总结】\n",
+      "1. 唐僧师徒四人\n",
+      "2. 孙悟空、猪八戒、沙僧\n",
+      "3. 白龙马也算成员\n",
+      "\n",
+      "【拓展建议】可以看看原著了解详细人物关系"
+     ]
+    }
+   ],
+   "source": [
+    "# 流式生成回答\n",
+    "for chunk in rag_chain2.stream(\"西游记主角几个人\"):\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3665f84c-aff1-4af9-a62a-ebd1d777a017",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【要点总结】\n",
+      "1. 背景信息未提前十回\n",
+      "2. 仅描述当前回目妖怪\n",
+      "3. 无法统计总数\n",
+      "\n",
+      "【拓展建议】\n",
+      "建议查阅原著前十回目录\n",
+      "或相关统计资料获取准确数据"
+     ]
+    }
+   ],
+   "source": [
+    "for chunk in rag_chain2.stream(\"西游记前十回有多少妖怪\"):\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d1453e63-c1cd-4b40-9c87-66464e4d533c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【要点总结】\n",
+      "1. 背景信息未提最后一回\n",
+      "2. 仅包含狮驼岭等片段\n",
+      "3. 无取经结局相关内容\n",
+      "\n",
+      "【拓展建议】建议查阅原著第100回或电视剧结局了解唐僧师徒取得真经、封佛等最终情节"
+     ]
+    }
+   ],
+   "source": [
+    "for chunk in rag_chain2.stream(\"西游记的最后一回讲的是什么\"):\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1862ed8b-81f1-412b-87f5-1228f54542f3",
    "metadata": {},
    "outputs": [],
    "source": []
